--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openmp/nways_openmp.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openmp/nways_openmp.ipynb
@@ -255,7 +255,7 @@
     "- `gpu`             Globally set the target device to an NVIDIA GPU\n",
     "- `multicore`       Globally set the target device to the host CPU\n",
     "\n",
-    "**NOTE:** `-Minfo=mp` enables OpenMP information."
+    "**NOTE:** `-Minfo=mp` enables OpenMP information. Moreober, since we are targeting the NVTX v3 API, a header-only C library, and added Fortran-callable wrappers to the code, we add `-lnvhpcwrapnvtx` at the compile time to do the link to the library."
    ]
   },
   {
@@ -265,7 +265,7 @@
    "outputs": [],
    "source": [
     "#Compile the code for muticore\n",
-    "!cd ../../source_code/openmp && nvfortran -mp=multicore -Minfo=mp -I/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/include -o rdf nvtx.f90 rdf.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
+    "!cd ../../source_code/openmp && nvfortran -mp=multicore -Minfo=mp -o rdf rdf.f90 -lnvhpcwrapnvtx"
    ]
   },
   {
@@ -349,7 +349,7 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvfortran -mp=gpu -Minfo=mp -o rdf nvtx.f90 rdf.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
+    "!cd ../../source_code/openmp && nvfortran -mp=gpu -Minfo=mp -o rdf rdf.f90 -lnvhpcwrapnvtx"
    ]
   },
   {
@@ -441,7 +441,7 @@
     "| CCE| latest | Cray | 4.5 partial spec supported | \n",
     "| XL | latest | IBM | 4.5 partial spec supported |\n",
     "| Clang | 9.0 | Community | 4.5 partial spec supported |\n",
-    "| HPC SDK | 21.7 | NVIDIA HPC SDK | 5.0 spec supported |\n",
+    "| HPC SDK | 22.3 | NVIDIA HPC SDK | 5.0 spec supported |\n",
     "\n"
    ]
   },
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
