--- a/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/cupy/cupy_guide.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/cupy/cupy_guide.ipynb
@@ -827,12 +827,12 @@
     "    tid = jit.blockDim.x * jit.blockIdx.x + jit.threadIdx.x\n",
     "    d_C[tid] = d_A[tid] + d_B[tid]\n",
     "\n",
-    "N = 500000 #initialize array size\n",
+    "N = 100000 #initialize array size\n",
     "num_of_threads_per_block = 128\n",
     "num_of_blocks_per_grid = math.ceil(N / num_of_threads_per_block)\n",
     "\n",
-    "d_A = cp.arange(N, dtype=cp.float32)\n",
-    "d_B = cp.arange(N, dtype=cp.float32)\n",
+    "d_A = cp.arange(N, dtype=cp.int32)\n",
+    "d_B = cp.arange(N, dtype=cp.int32)\n",
     "d_C = cp.zeros(N, dtype=cp.int32) # initialize zero filled array\n",
     "addFunc((num_of_blocks_per_grid,),(num_of_threads_per_block,),(d_A, d_B, d_C))\n",
     "print(\"d_C:\", d_C)\n",
@@ -971,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
