--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/doconcurrent/nways_doconcurrent.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/doconcurrent/nways_doconcurrent.ipynb
@@ -102,7 +102,9 @@
     "\n",
     "- `stdpar` : This flag tell the compiler to enable Parallel DO-CONCURRENT for a respective target\n",
     "- `stdpar=multicore` will allow us to compile our code for a multicore\n",
-    "- `stdpar` will allow us to compile our code for a NVIDIA GPU (Default is NVIDIA)"
+    "- `stdpar` will allow us to compile our code for a NVIDIA GPU (Default is NVIDIA)\n",
+    "\n",
+    "**Note:** Since we are targeting the NVTX v3 API, a header-only C library, and added Fortran-callable wrappers to the code, we add `-lnvhpcwrapnvtx` at the compile time to do the link to the library."
    ]
   },
   {
@@ -112,7 +114,7 @@
    "outputs": [],
    "source": [
     "#Compile the code for muticore\n",
-    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=multicore -Minfo -o rdf nvtx.f90 rdf.f90 -I/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/include -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
+    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=multicore -Minfo -o rdf rdf.f90 -lnvhpcwrapnvtx"
    ]
   },
   {
@@ -190,7 +192,7 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=gpu -Minfo -acc -o rdf nvtx.f90 rdf.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
+    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=gpu -Minfo -acc -o rdf rdf.f90 -lnvhpcwrapnvtx"
    ]
   },
   {
@@ -345,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
