openacc,miniprofiler changes

--- a/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab5.ipynb
+++ b/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab5.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab5 && nv-nsight-cu-cli -c 1 -s 10 -k compute_tendencies_x -f -o miniWeather1 ./miniWeather"
+    "!cd ../source_code/lab5 && nv-nsight-cu-cli -c 1 -s 10 -k regex:compute_tendencies_x -f -o miniWeather1 ./miniWeather"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab5 && nv-nsight-cu-cli -c 1 -s 10 -k semi_discrete_step -f -o miniWeather2 ./miniWeather"
+    "!cd ../source_code/lab5 && nv-nsight-cu-cli -c 1 -s 10 -k regex:semi_discrete_step -f -o miniWeather2 ./miniWeather"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
