--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openmp/nways_openmp.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openmp/nways_openmp.ipynb
@@ -135,7 +135,7 @@
     "```fortran\n",
     "    !Moves this region of code to the GPU and implicitly maps data.\n",
     "    !$omp target\n",
-    "        !$omp parallel for\n",
+    "        !$omp parallel do\n",
     "        do i=1,N \n",
     "            ANew(j) = A (j-1) + A(j+1)\n",
     "        end do\n",
@@ -147,7 +147,7 @@
     "Map a variable to/from the device.Map directive helps developer to explicitly define and reduce data copies. The ```target data```construct is used to mark such regions\n",
     "\n",
     "```fortran\n",
-    "!$omp target map(map-type: list)\n",
+    "!$omp target data map(map-type: list)\n",
     "```\n",
     "\n",
     "Example of mapping data directives are as follows: \n",
@@ -161,7 +161,7 @@
     "```fortran\n",
     "!Moves this region of code to the GPU and explicitly maps data.\n",
     "!$omp target data map(to:A(:)) map(from:ANew(:))\n",
-    "        !$omp parallel for\n",
+    "        !$omp parallel do\n",
     "        do i=1,N \n",
     "            ANew(j) = A (j-1) + A(j+1)\n",
     "        end do\n",
@@ -203,11 +203,11 @@
     "As shown in the image only the master thread performs the computation which is not so optimzal in case of GPU architecture. To solve this problem we will make use of work-sharing as we did before. When any team encounters a worksharing construct, the work inside the construct is divided among the members of the team, and executed cooperatively instead of being executed by every thread. There are many work sharing constructs defined, the one that we plan to use is : \n",
     "\n",
     "```\n",
-    "!$omp parallel for\n",
+    "!$omp parallel do\n",
     "```\n",
     "\n",
     "```fortran\n",
-    "    !$omp target teams distribute parallel for\n",
+    "    !$omp target teams distribute parallel do\n",
     "        do j=1,N \n",
     "           do i=1,N \n",
     "             ANew(j,i) = 0.25 * (A(j-1,i)  +  A(j+1,i) + A(j,i-1) + A(j,i+1))\n",
@@ -277,7 +277,7 @@
     "```\n",
     "\tMulticore output\n",
     "\t\trdf:\n",
-    "         98, !$omp target teams distribute parallel for\n",
+    "         98, !$omp target teams distribute parallel do\n",
     "         98, Generating Multicore code\n",
     "         99, Loop parallelized across teams and threads, schedule(static)\n",
     "```\n",
