--- a/hpc_ai/PINN/English/python/jupyter_notebook/introduction/Introductory_Notebook.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/introduction/Introductory_Notebook.ipynb
@@ -4,29 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[Home Page](../../Start_Here.ipynb)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[1]\n",
-    "[2](../diffusion_1d/Diffusion_Problem_Notebook.ipynb)\n",
-    "[3](../spring_mass/Spring_Mass_Problem_Notebook.ipynb)\n",
-    "[4](../chip_2d/Challenge_CFD_Problem_Notebook.ipynb)\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "[Next Notebook](../diffusion_1d/Diffusion_Problem_Notebook.ipynb)\n",
-    "\n",
-    "\n",
     "# Introduction to Physics Informed Neural Networks (PINNs)"
    ]
   },
@@ -34,22 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will see the advantages of Physics Informed modeling over data-driven modeling and will also outline the brief theory about Physics Informed Neural Networks (PINNs)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PINNs vs Data-Driven Methods\n",
-    "\n",
-    "The data-driven methods are very useful in applications where the data is already available to learn from, or in situations where the underlying physics is not known. For such methods, the generalization errors are dependent on the amount of training data. Usually, obtaining the training data from simulations is a resource-hungry process and can limit the amounts of data the model is trained on. This places restrictions on the quality of results obtained from the data-driven methods and it usually takes a large amount of training data and fine-tuning of the model to capture the physics better.\n",
-    "\n",
-    "<img src=\"image_data_driven_cons.png\" alt=\"Drawing\" style=\"width: 700px;\"/>\n",
-    "\n",
-    "Since for most of the physical systems, we know the underlying governing equations (e.g. Navier Stokes equations for the fluid mechanics problems), we can make the neural networks more cognizant of these physical laws by incorporating these governing equations in training framework. In such cases we can train the models on lesser data, or even train completely without any data from a solver. Also, in such Physics-Informed Neural Networks, treatment of inverse problems and parameterized problems (e.g. problems with parameterized geometry/material properties/boundary conditions) is easy. Due to these advantages, we will now see how to apply PINNs for physics-based problems using the Modulus library. \n",
-    "\n",
-    "Let's start with discussing the theory behind the PINNs briefly."
+    "In this notebook we will outline the brief theory about Physics Informed Neural Networks (PINNs)."
    ]
   },
   {
@@ -115,7 +77,7 @@
     "  L_{BC} = \\int_1^2 (u_{net}(0,l))^2 + (u_{net}(l,l) dl \\approx \\left(\\int_1^2 dl\\right) \\frac{1}{N} \\sum^{N}_{i=0} (u_{net}(0, l_i))^2 + (u_{net}(l_i, l_i))^2\n",
     "\\end{equation}\n",
     "\n",
-    "In figure below we see the solution to the differential equation for various $l$ values after optimizing the network on this loss. While this example problem is overly simplistic, the ability to solve parameterized geometries presents significant industrial value. Instead of performing a single simulation we can solve multiple designs at the same time and for reduced computational cost. More examples of this can be found in *Modulus User Guide Chapter 13*.\n",
+    "In figure below we see the solution to the differential equation for various $l$ values after optimizing the network on this loss. While this example problem is overly simplistic, the ability to solve parameterized geometries presents significant industrial value. Instead of performing a single simulation we can solve multiple designs at the same time and for reduced computational cost. More examples of this can be found in [Modulus User Documentation](https://docs.nvidia.com/deeplearning/modulus/index.html).\n",
     "\n",
     "<img src=\"every_parabola.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
    ]
@@ -144,19 +106,7 @@
     "Comparison of $u_{net}(x)$ and the train points from $u_{true}$:\n",
     "<img src=\"inverse_parabola_2.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n",
     "\n",
-    "More examples of solving an inverse problem can be found in the *Modulus User Guide Chapter 12*.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import IFrame, display\n",
-    "#filepath = \"http://wikipedia.org\" # works with websites too!\n",
-    "filepath = \"Modulus_v21.06_User_Guide.pdf\"\n",
-    "IFrame(filepath, width=700, height=400)"
+    "More examples of solving an inverse problem can be found in the [Modulus User Documentation](https://docs.nvidia.com/deeplearning/modulus/index.html).\n"
    ]
   },
   {
@@ -164,35 +114,13 @@
    "metadata": {},
    "source": [
     "# Licensing\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[Home Page](../../Start_Here.ipynb)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[1]\n",
-    "[2](../diffusion_1d/Diffusion_Problem_Notebook.ipynb)\n",
-    "[3](../spring_mass/Spring_Mass_Problem_Notebook.ipynb)\n",
-    "[4](../chip_2d/Challenge_CFD_Problem_Notebook.ipynb)\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "[Next Notebook](../diffusion_1d/Diffusion_Problem_Notebook.ipynb)"
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0).\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
