--- a/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_3_template.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_3_template.ipynb
@@ -24,9 +24,7 @@
    "source": [
     "Let us start by importing the required packages and modules\n",
     "\n",
-    "**Note: You need to edit the `chip_2d_inverse_template.py` script that is placed in the ../source_code/chip_2d/ directory.**\n",
-    "\n",
-    "From the top menu, click on File, and Open `chip_2d_inverse_template.py` from the current directory at `../source_code/chip_2d` directory. Remember to SAVE your code after changes, before running below cells."
+    "**Note: You need to edit the [`chip_2d_inverse_template.py`](../../source_code/chip_2d/chip_2d_inverse_template.py) script that is placed in the `chip_2d/` directory.**"
    ]
   },
   {
@@ -34,18 +32,25 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "from sympy import Symbol\n",
+    "import torch\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
+    "from sympy import Symbol, Eq\n",
+    "\n",
+    "import modulus\n",
+    "from modulus.hydra import to_absolute_path, instantiate_arch, ModulusConfig\n",
+    "from modulus.utils.io import csv_to_dict\n",
     "from modulus.solver import Solver\n",
-    "from modulus.dataset import TrainDomain, ValidationDomain, MonitorDomain\n",
-    "from modulus.data import Validation, Monitor, BC\n",
-    "from modulus.sympy_utils.geometry_2d import Rectangle, Line, Channel2D\n",
-    "from modulus.sympy_utils.functions import parabola\n",
-    "from modulus.csv_utils.csv_rw import csv_to_dict\n",
-    "from modulus.PDES.navier_stokes import IntegralContinuity, NavierStokes\n",
-    "from modulus.controller import ModulusController\n",
-    "from modulus.architecture import FourierNetArch\n",
+    "from modulus.domain import Domain\n",
+    "from modulus.geometry.primitives_2d import Rectangle, Line, Channel2D\n",
+    "from modulus.utils.sympy.functions import parabola\n",
+    "from modulus.eq.pdes.navier_stokes import NavierStokes\n",
+    "from modulus.eq.pdes.basic import NormalDotVec\n",
+    "from modulus.domain.constraint import (\n",
+    "    PointwiseConstraint,\n",
+    ")\n",
+    "from modulus.domain.monitor import PointwiseMonitor\n",
+    "from modulus.key import Key\n",
+    "from modulus.node import Node\n",
     "```"
    ]
   },
@@ -53,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this problem, since we are interested in only assimilating the OpenFOAM data and getting the inference out of it, you do not need create the geometry. Fill in the `Chip2DTrain` based on the data generated from OpenFOAM. Remember to add appropriate keys to the dataset to solve for the correct equations. "
+    "For this problem, since we are interested in only assimilating the OpenFOAM data and getting the inference out of it, you do not need create the geometry. Also, do not forget to detach the gradients for appropriate variables while setting the equations. "
    ]
   },
   {
@@ -63,30 +68,57 @@
     "```python\n",
     "#TODO: Replace all the placeholders with appropriate values\n",
     "\n",
-    "# define sympy variables to parametrize domain curves\n",
-    "x, y = Symbol('x'), Symbol('y')\n",
+    "@modulus.main(config_path=\"conf\", config_name=\"config_inverse\")\n",
+    "def run(cfg: ModulusConfig) -> None:\n",
     "\n",
-    "# OpenFOAM data\n",
-    "mapping = {'Points:0': 'x', 'Points:1': 'y',\n",
-    "           'U:0': 'u', 'U:1': 'v', 'p': 'p'}\n",
-    "openfoam_var = csv_to_dict('openfoam/2D_chip_fluid0.csv', mapping)\n",
-    "openfoam_var['x'] -= 2.5 # normalize pos\n",
-    "openfoam_var['y'] -= 0.5\n",
-    "openfoam_invar_numpy = {key: value for key, value in openfoam_var.items() if key in ['x', 'y']}\n",
-    "openfoam_outvar_numpy = {key: value for key, value in openfoam_var.items() if key in ['u', 'v', 'p']}\n",
+    "    # make list of nodes to unroll graph on\n",
+    "    ns = NavierStokes(nu=\"nu\", rho=1.0, dim=2, time=False)\n",
+    "    flow_net = instantiate_arch(\n",
+    "        input_keys=[Key(\"x\"), Key(\"y\")],\n",
+    "        output_keys=[Key(\"u\"), Key(\"v\"), Key(\"p\")],\n",
+    "        cfg=cfg.arch.fully_connected,\n",
+    "    )\n",
+    "    inverse_net = instantiate_arch(\n",
+    "        input_keys=[Key(\"x\"), Key(\"y\")],\n",
+    "        output_keys=[Key(\"nu\")],\n",
+    "        cfg=cfg.arch.fully_connected,\n",
+    "    )\n",
     "\n",
-    "#TODO: Add keys and appropriate values for continuity and momentum equations in x and y directions here:\n",
-    "openfoam_outvar_numpy['continuity'] = placeholder\n",
-    "openfoam_outvar_numpy['momentum_x'] = placeholder\n",
-    "openfoam_outvar_numpy['momentum_y'] = placeholder\n",
+    "    nodes = (\n",
+    "        ns.make_nodes(\n",
+    "            detach_names=[placeholder]\n",
+    "        )\n",
+    "        + [flow_net.make_node(name=\"flow_network\", jit=cfg.jit)]\n",
+    "        + [inverse_net.make_node(name=\"inverse_network\", jit=cfg.jit)]\n",
+    "    )\n",
     "\n",
-    "class Chip2DTrain(TrainDomain):\n",
-    "  def __init__(self, **config):\n",
-    "    super(Chip2DTrain, self).__init__()\n",
-    "    \n",
-    "    # fill in the appropriate parameters for the from_numpy function\n",
-    "    interior=BC.from_numpy(placeholder, placeholder, batch_size=placeholder)\n",
-    "    self.add(interior, name=\"Interior\")\n",
+    "    # add constraints to solver\n",
+    "    # data\n",
+    "    mapping = {\"Points:0\": \"x\", \"Points:1\": \"y\", \"U:0\": \"u\", \"U:1\": \"v\", \"p\": \"p\"}\n",
+    "    openfoam_var = csv_to_dict(to_absolute_path(\"openfoam/2D_chip_fluid0.csv\"), mapping)\n",
+    "    openfoam_var[\"x\"] -= 2.5  # normalize pos\n",
+    "    openfoam_var[\"y\"] -= 0.5\n",
+    "    openfoam_invar_numpy = {\n",
+    "        key: value for key, value in openfoam_var.items() if key in [\"x\", \"y\"]\n",
+    "    }\n",
+    "    openfoam_outvar_numpy = {\n",
+    "        key: value for key, value in openfoam_var.items() if key in [\"u\", \"v\", \"p\"]\n",
+    "    }\n",
+    "    openfoam_outvar_numpy[\"continuity\"] = placeholder\n",
+    "    openfoam_outvar_numpy[\"momentum_x\"] = placeholder\n",
+    "    openfoam_outvar_numpy[\"momentum_y\"] = placeholder\n",
+    "\n",
+    "    # make domain\n",
+    "    domain = Domain()\n",
+    "\n",
+    "    # data and pdes\n",
+    "    data = PointwiseConstraint.from_numpy(\n",
+    "        nodes=nodes,\n",
+    "        invar=openfoam_invar_numpy,\n",
+    "        outvar=openfoam_outvar_numpy,\n",
+    "        batch_size=cfg.batch_size.data,\n",
+    "    )\n",
+    "    domain.add_constraint(data, name=\"Data\")\n",
     "```"
    ]
   },
@@ -94,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a `MonitorDomain` to monitor the average viscosity predicted by the model "
+    "Create monitors for the average viscosity predicted by the model "
    ]
   },
   {
@@ -102,12 +134,15 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "class Chip2DMonitor(MonitorDomain):\n",
-    "  def __init__(self, **config):\n",
-    "    super(Chip2DMonitor, self).__init__()\n",
-    "    \n",
-    "    global_monitor = Monitor(openfoam_invar_numpy, {'average_nu': lambda var: tf.reduce_mean(var['nu'])})\n",
-    "    self.add(global_monitor, 'GlobalMonitor')\n",
+    "    # add monitors\n",
+    "    monitor = PointwiseMonitor(\n",
+    "        openfoam_invar_numpy,\n",
+    "        output_names=[\"nu\"],\n",
+    "        metrics={\"mean_nu\": lambda var: torch.mean(var[\"nu\"])},\n",
+    "        nodes=nodes,\n",
+    "        requires_grad=True,\n",
+    "    )\n",
+    "    domain.add_monitor(monitor)\n",
     "```"
    ]
   },
@@ -115,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now complete the last part of the code by creating the `ChipSolver` to solve our problem. Don't forget to stop the gradients for appropriate variables while setting the equations. "
+    "Now complete the last part of the code by creating the `Solver` to solve our problem. "
    ]
   },
   {
@@ -123,49 +158,39 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "#TODO: Replace all the placeholders with appropriate values\n",
-    "class ChipSolver(Solver):\n",
-    "  train_domain = placeholder\n",
-    "  monitor_domain = placeholder\n",
+    "    # make solver\n",
+    "    slv = Solver(cfg, domain)\n",
     "\n",
-    "  def __init__(self, **config):\n",
-    "    super(ChipSolver, self).__init__(**config)\n",
-    "\n",
-    "    self.equations = (NavierStokes(nu=placeholder, rho=1, dim=2, time=False).make_node(stop_gradients=[placeholder]))\n",
-    "\n",
-    "    flow_net = self.arch.make_node(name='flow_net',\n",
-    "                                   inputs=['x', 'y'],\n",
-    "                                   outputs=['u', 'v', 'p'])\n",
-    "    invert_net = self.arch.make_node(name='invert_net',\n",
-    "                                     inputs=['x', 'y'],\n",
-    "                                     outputs=['nu'])\n",
-    "    self.nets = [flow_net, invert_net]\n",
-    "\n",
-    "  @classmethod\n",
-    "  def update_defaults(cls, defaults):\n",
-    "    defaults.update({\n",
-    "        'network_dir': './network_checkpoint_chip_2d_inverse',\n",
-    "        'rec_results': True,\n",
-    "        'rec_results_freq': 100,\n",
-    "        'start_lr': 3e-4,\n",
-    "        'max_steps': 40000,\n",
-    "        'decay_steps': 100,\n",
-    "        'xla': True\n",
-    "        })\n",
-    "if __name__ == '__main__':\n",
-    "  ctr = ModulusController(ChipSolver)\n",
-    "  ctr.run()\n",
-    "```\n",
+    "    # start solver\n",
+    "    slv.solve()\n",
     "\n",
     "\n",
+    "if __name__ == \"__main__\":\n",
+    "    run()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 ../../source_code/chip_2d/chip_2d_inverse_template.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Licensing\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)"
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0).\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
