--- a/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_CFD_Problem_Notebook.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_CFD_Problem_Notebook.ipynb
@@ -4,26 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[Home Page](../../Start_Here.ipynb)\n",
-    "\n",
-    "[Previous Notebook](../spring_mass/Spring_Mass_Problem_Notebook.ipynb)\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[1](../introduction/Introductory_Notebook.ipynb)\n",
-    "[2](../diffusion_1d/Diffusion_Problem_Notebook.ipynb)\n",
-    "[3](../spring_mass/Spring_Mass_Problem_Notebook.ipynb)\n",
-    "[4]\n",
-    "   \n",
-    "\n",
-    "\n",
     "# Steady State 2D Laminar Flow over a Chip"
    ]
   },
@@ -45,39 +25,19 @@
     "### Objectives \n",
     "The objectives of this problem are following:\n",
     "1. [Fluid Flow](Challenge_1_template.ipynb) Use PINNs to solve the fluid flow for the given geometry and flow parameters\n",
-    "2. [Parameterized](Challenge_2_template.ipynb)Use PINNs to solve the parameterized problem by varying the chip's geometry (width and height)\n",
-    "3. [Inverse Problem](Challenge_3_template.ipynb)Use PINNs along with the OpenFOAM data to solve the inverse problem of finding the viscosity of the flow, given the flow field data \n",
-    "\n",
-    "\n",
+    "2. [Parameterized](Challenge_2_template.ipynb) Use PINNs to solve the parameterized problem by varying the chip's geometry (width and height)\n",
+    "3. [Inverse Problem](Challenge_3_template.ipynb) Use PINNs along with the OpenFOAM data to solve the inverse problem of finding the viscosity of the flow, given the flow field data \n",
     "\n",
     "# Licensing\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)\n",
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0).\n",
     "\n",
-    "\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[Home Page](../../Start_Here.ipynb)\n",
-    "\n",
-    "[Previous Notebook](../spring_mass/Spring_Mass_Problem_Notebook.ipynb)\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "&emsp;&emsp;&ensp;\n",
-    "[1](../introduction/Introductory_Notebook.ipynb)\n",
-    "[2](../diffusion_1d/Diffusion_Problem_Notebook.ipynb)\n",
-    "[3](../spring_mass/Spring_Mass_Problem_Notebook.ipynb)\n",
-    "[4]\n",
-    "   "
+    "    "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -91,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
