Replace delta by mathrm{d} for ordinary derivative in latex/markdown.

--- a/hpc_ai/PINN/English/python/jupyter_notebook/introduction/Introductory_Notebook.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/introduction/Introductory_Notebook.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "\\begin{equation} \\label{1d_equation}\n",
     "    \\mathbf{P} : \\left\\{\\begin{matrix}\n",
-    "\\frac{\\delta^2 u}{\\delta x^2}(x) = f(x), \\\\ \n",
+    "\\frac{\\mathrm{d}^2 u}{\\mathrm{d} x^2}(x) = f(x), \\\\ \n",
     "\\\\\n",
     "u(0) = u(1) = 0,\n",
     "\\end{matrix}\\right.\n",
@@ -40,10 +40,10 @@
     "  L_{BC} = u_{net}(0)^2 + u_{net}(1)^2\n",
     "\\end{equation}\n",
     "\n",
-    "For encoding the equations, we need to compute the derivatives of $u_{net}$. Using automatic differentiation we can do so and compute $\\frac{\\delta^2 u_{net}}{\\delta x^2}(x)$. This allows us to write a loss function of the form:\n",
+    "For encoding the equations, we need to compute the derivatives of $u_{net}$. Using automatic differentiation we can do so and compute $\\frac{\\mathrm{d}^2 u_{net}}{\\mathrm{d} x^2}(x)$. This allows us to write a loss function of the form:\n",
     "\n",
     "\\begin{equation} \\label{sumation_loss}\n",
-    "  L_{residual} = \\frac{1}{N}\\sum^{N}_{i=0} \\left( \\frac{\\delta^2 u_{net}}{\\delta x^2}(x_i) - f(x_i) \\right)^2\n",
+    "  L_{residual} = \\frac{1}{N}\\sum^{N}_{i=0} \\left( \\frac{\\mathrm{d}^2 u_{net}}{\\mathrm{d} x^2}(x_i) - f(x_i) \\right)^2\n",
     "\\end{equation}\n",
     "\n",
     "Where the $x_i$'s are a batch of points sampled in the interior, $x_i \\in (0, 1)$. Our total loss is then $L = L_{BC} + L_{residual}$. Optimizers such as Adam are used to train this neural network. Given $f(x)=1$, the true solution is $\\frac{1}{2}(x-1)x$. Upon solving the problem, you can obtain good agreement between the exact solution and the neural network solution as shown in Figure below.\n",
@@ -61,7 +61,7 @@
     "\n",
     "\\begin{equation} \\label{1d_equation2}\n",
     "    \\mathbf{P} : \\left\\{\\begin{matrix}\n",
-    "\\frac{\\delta^2 u}{\\delta x^2}(x) = f(x), \\\\ \n",
+    "\\frac{\\mathrm{d}^2 u}{\\mathrm{d} x^2}(x) = f(x), \\\\ \n",
     "\\\\\n",
     "u(0) = u(l) = 0,\n",
     "\\end{matrix}\\right.\n",
@@ -70,7 +70,7 @@
     "To solve this parameterized problem we can have the neural network take $l$ as input, $u_{net}(x,l)$. The losses then take the form,\n",
     "\n",
     "\\begin{equation}\n",
-    "  L_{residual} = \\int_1^2 \\int_0^l \\left( \\frac{\\delta^2 u_{net}}{\\delta x^2}(x,l) - f(x) \\right)^2 dx dl \\approx \\left(\\int_1^2 \\int^l_0 dxdl\\right) \\frac{1}{N} \\sum^{N}_{i=0} \\left(\\frac{\\delta^2 u_{net}}{\\delta x^2}(x_i, l_i) - f(x_i)\\right)^2\n",
+    "  L_{residual} = \\int_1^2 \\int_0^l \\left( \\frac{\\mathrm{d}^2 u_{net}}{\\mathrm{d} x^2}(x,l) - f(x) \\right)^2 dx dl \\approx \\left(\\int_1^2 \\int^l_0 dxdl\\right) \\frac{1}{N} \\sum^{N}_{i=0} \\left(\\frac{\\mathrm{d}^2 u_{net}}{\\mathrm{d} x^2}(x_i, l_i) - f(x_i)\\right)^2\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
@@ -91,7 +91,7 @@
     "Another useful application of a neural network solver is solving inverse problems. In an inverse problem, we start with a set of observations and then use those observations to calculate the causal factors that produced them. To illustrate how to solve inverse problems with a neural network solver, we give the example of inverting out the source term $f(x)$ from same equation from above problem. Suppose we are given the solution $u_{true}(x)$ at 100 random points between 0 and 1 and we want to determine the $f(x)$ that is causing it. We can do this by making two neural networks $u_{net}(x)$ and $f_{net}(x)$ to approximate both $u(x)$ and $f(x)$. These networks are then optimized to minimize the following losses;\n",
     "\n",
     "\\begin{equation}\n",
-    "  L_{residual} \\approx \\left(\\int^1_0 dx\\right) \\frac{1}{N} \\sum^{N}_{i=0} \\left(\\frac{\\delta^2 u_{net}}{\\delta x^2}(x_i, l_i) - f_{net}(x_i)\\right)^2\n",
+    "  L_{residual} \\approx \\left(\\int^1_0 dx\\right) \\frac{1}{N} \\sum^{N}_{i=0} \\left(\\frac{\\mathrm{d}^2 u_{net}}{\\mathrm{d} x^2}(x_i, l_i) - f_{net}(x_i)\\right)^2\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
