Add env variables definition to run on cluster.

--- a/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_1_template.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_1_template.ipynb
@@ -344,6 +344,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ[\"RANK\"]=\"0\"\n",
+    "os.environ[\"WORLD_SIZE\"]=\"1\"\n",
+    "os.environ[\"MASTER_ADDR\"]=\"localhost\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!python3 ../../source_code/chip_2d/chip_2d_template.py"
    ]
   },
