neural net arch should be fully_connected (not fourier_net).

--- a/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_1_template.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/chip_2d/Challenge_1_template.ipynb
@@ -86,7 +86,7 @@
     "    flow_net = instantiate_arch(\n",
     "        input_keys=[placeholder],\n",
     "        output_keys=[placeholder],\n",
-    "        cfg=cfg.arch.fourier_net,\n",
+    "        cfg=cfg.arch.fully_connected,\n",
     "    )\n",
     "    nodes = (\n",
     "        ns.make_nodes()\n",
